refactor(swagger.yaml, default_controller.py): changed the previous key value named 'isbn' into the new key value 'id'
